--- a/style.css
+++ b/style.css
@@ -614,3 +614,43 @@ input#s{
 		width:50%;
 	}
 }
+
+/* Custom styles for abledaccess.com
+--------------------------------------------------------------------------- */
+.figure {
+	margin: 0 4.9em 0.75em;
+	position: relative;
+}
+.figure img {
+	width: 100%;
+}
+img.bio {
+	border: 2px solid #333;
+}
+figcaption {
+	background: #333;
+	background-color: rgba(0,0,0,0.5);
+	bottom: 1em;
+	color: #fff;
+	font-size: 75%;
+	right: 0.5em;
+	padding: 0.2em 0.35em;
+	position: absolute;
+}
+#ec_math_a{
+	width:4em;
+}
+
+/* Custom responsive screen styles for viewports from 320px (small screen) and exceeding 1024px (desktop and beyond) on abledaccess.com
+--------------------------------------------------------------------------- */
+@media screen and (max-width: 768px) {
+	.figure {
+		margin: 0 2em 0.75em;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.figure {
+		margin: 0 1em 0.75em;
+	}
+}
