--- a/style.css
+++ b/style.css
@@ -428,11 +428,19 @@ html{
 body{
 	font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Grande", sans-serif;
 	font-size:125%;
-	font-weight:normal;
+	font-weight:300;
 	line-height:1.5;
 }
 .fSS5-theme{
 	background:#f7f7f7;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+	font-weight:400;
 }
 
 /* fSS5-skip-links
