MASTER: A small abbr style tweak, so the dotted border across the bottom doesn't show on touch devices, where the abbreviation's definition (via :hover) is inaccessible.

--- a/style.css
+++ b/style.css
@@ -593,6 +593,9 @@ blockquote,
 blockquote{
 	border-left:3px solid #ccc;
 }
+.fSS5-touch abbr{
+	border-bottom:0;
+}
 .entry-utility{
 	margin:2em 0;
 }
