MASTER: Fix significant error(s) that prevented theme display
And clean up some theme name mismatches.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@ Description: An accessibility-ready starter WordPress theme employing the Fluid 
 Version: 0.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: uio5
+Text Domain: UIOFive
 Domain Path: /languages/
 Tags: accessibility-ready
 
